--- a/gradle.properties
+++ b/gradle.properties
@@ -21,13 +21,7 @@ springSecurityWeb=3.2.5.RELEASE
 springSecurityConfig=3.2.5.RELEASE
 javaxServletVersion=3.0.1
 
-systemProp.http.proxyHost=qaproxy.gid.gap.com
-systemProp.http.proxyPort=8080
-systemProp.http.proxyUser=
-systemProp.http.proxyPassword=
-systemProp.http.nonProxyHosts=localhost|*.gap.com|*.gap.dev|*.gapinc.dev|*.gapinc.com
-
-group=com.gap.plan
+group=com.planitpal.plan
 version=dev
 environment=ci
 versionFilePath=/META-INF/app-revision.txt
@@ -36,19 +30,12 @@ cucumberFeature=features
 
 runSonarMetrics=true
 
-ivyPublishUrl=http://artifactory.gapinc.dev/artifactory/local-non-prod
-ivyPublishUsername=ec-build-snap
-ivyPublishPassword=$nap4me
-
 coberturaExcludes=**/configuration/*
 
-tomcatTarballUrl=http://ks64.phx.gapinc.dev/gapSoftware/tomcat/source/apache-tomcat-7.0.47.tar.gz
-artifactoryLibsUrl=http://artifactory.gapinc.dev/artifactory/remote-repos
-
+tomcatTarballUrl=http://www.trieuvan.com/apache/tomcat/tomcat-7/v7.0.62/bin/apache-tomcat-7.0.62.tar.gz
 
 apiTestBaseUri=http://localhost
 apiTestPort=8080
 testLogFile=test.log
-
 
 org.gradle.jvmargs=-XX:MaxPermSize=512m -XX:MaxHeapSize=1024m
